test_suite5/ALAN/test_suite/alan-2022-examples/failing/003560_mutation.alan
source H begin if 4557 then relax elsif 6 then relax boolean end end
